[package]
name = "grid_mask"
version = "0.1.0"
edition = "2024"
description = "A composable bit-board shape type."
repository = "https://github.com/MaxMahem/grid_mask"
license = "MIT OR Apache-2.0"
authors = [ "Austin Stanley <MaxTMahem@gmail.com>" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-integer = { version = "0.6.1", features = ["macro", "std"] }
collect_failable = { version = "0.18.0", default-features = false }
derive_more = { version = "2.1.1", default-features = false, features = ["add", "add_assign", "constructor", "from", "into", "not", "display", "as_ref", "deref", "mul"] }
fluent_result = { version = "0.10.1", default-features = false }
itertools = { version = "0.14.0", default-features = false }
sealed = "0.6.0"
size_hinter = "0.4.1"
tap = "1.0.1"
thiserror = { version = "2.0.18", default-features = false }
